--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,30 +1,36 @@
 .container {
     margin: auto;
-    max-width: 900px;
-    font-family: sans-serif;
+    width:90%;
+    padding-bottom: 5rem;
   }
   
-  .heading {
-    color: rebeccapurple;
-  }
+.heading {
+  color: rebeccapurple;
+}
 
-  .nav-links {
-    display: flex;
-    list-style: none;
-    padding-left: 0;
-  }
+.nav-links {
+  display: flex;
+  list-style: none;
+  padding-left: 0;
+}
 
-  .nav-link-item {
-    padding-right: 2rem;
-  }
-  
-  .nav-link-text {
-    color: black;
-  }
+.nav-link-item {
+  padding-right: 2rem;
+}
 
-  .site-title {
-    font-size: 3rem;
-    color: gray;
-    font-weight: 700;
-    margin: 3rem 0;
-  }
+.nav-link-text {
+  color: black;
+}
+
+.site-title {
+  font-size: 3rem;
+  color: gray;
+  font-weight: 700;
+  margin: 3rem 0;
+}
+
+.background-Image {
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
